# inoxx-tools

./: .replit  README.md  main.py  package-lock.json  pyproject.toml  requirements.txt  test.py
ai/: code_assistant.py
attached_assets/: Pasted-Error-Generated-code-is-incomplete-or-contains-errors-invalid-syntax-unknown-line-1-Partia-1741256003648.txt  Pasted-Error-Generated-code-is-incomplete-or-contains-errors-unterminated-string-literal-detected-at-lin-1741256868400.txt  Pasted-Error-Generated-code-is-incomplete-or-contains-errors-unterminated-string-literal-detected-at-lin-1741257107752.txt  Pasted-Error-Generated-code-is-incomplete-or-contains-syntax-errors-invalid-syntax-unknown-line-1--1741255877065.txt
blockchain/: blockchain_core.py  smart_contracts.py
docs/: DOCUMENTATION.md  generate_pdf.py
editor/: code_editor.py  file_browser.py  project_manager.py
templates/: index.html
utils/: debugger.py  error_detector.py  snippet_manager.py  syntax_helper.py
